<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.phonepe.sentinel-ai</groupId>
        <artifactId>sentinel-ai</artifactId>
        <version>1.1.1-alpha4</version>
    </parent>

    <artifactId>sentinel-ai-session</artifactId>
    <name>Sentinel AI Agent Session Management</name>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.phonepe.sentinel-ai</groupId>
            <artifactId>sentinel-ai-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.phonepe.sentinel-ai</groupId>
            <artifactId>sentinel-ai-models-simple-openai</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.phonepe.sentinel-ai</groupId>
            <artifactId>sentinel-ai-core</artifactId>
            <version>${project.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>